Bug 1991290 - Remove some other overflow-clip-box: inherit usage that we don't care about. r=tnikkel,layout-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D266607

--- a/layout/style/res/ua.css
+++ b/layout/style/res/ua.css
@@ -197,7 +197,6 @@
   unicode-bidi: inherit;
   text-overflow: inherit;
   overflow: inherit;
-  overflow-clip-box: inherit;
   resize: inherit;
   padding: inherit;
   box-decoration-break: inherit;
@@ -214,7 +213,6 @@
   mask: inherit;
   opacity: inherit;
   text-decoration: inherit;
-  overflow-clip-box: inherit;
   unicode-bidi: inherit;
   user-select: inherit;
   text-overflow: inherit;
@@ -271,9 +269,6 @@
   align-items: inherit;
   justify-content: inherit;
   justify-items: inherit;
-  /* Do not change these. nsCSSFrameConstructor depends on them to create a good
-     frame tree. */
-  overflow-clip-box: inherit;
 }
 
 *|*::-moz-viewport,
